k8s-manifests/service-a-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-a
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
  selector:
    app: service-a
