k8s-manifests/service-b-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-b
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30081
  selector:
    app: service-b
