k8s-manifests/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway
  http:
  - match:
    - uri:
        prefix: /service-a
    rewrite:
      uri: /
    route:
    - destination:
        host: service-a
        port:
          number: 80
  - match:
    - uri:
        prefix: /service-b
    rewrite:
      uri: /
    route:
    - destination:
        host: service-b
        port:
          number: 80
